--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.2.0",
+    "@antfu/eslint-config": "^4.2.1",
     "@nuxt/eslint": "^1.0.1",
     "@nuxtjs/i18n": "^9.2.0",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@pinia/nuxt": "^0.9.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/eslint-plugin-tailwindcss": "^3.17.0",
-    "@vueuse/core": "^12.5.0",
-    "@vueuse/nuxt": "^12.5.0",
+    "@vueuse/core": "^12.7.0",
+    "@vueuse/nuxt": "^12.7.0",
     "eslint": "^9.20.1",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
+    "nuxt-aos": "^1.2.5",
     "nuxt-swiper": "^2.0.0",
     "pinia": "^2.3.1",
     "tailwindcss": "^3.4.17",
